feat(readme.md): 更新README.md文字说明
