# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/v1/sys/roles": {
             "get": {
-                "description": "这是一段接口描述",
+                "description": "这是一段接口描述\nCode 角色编码\nName 角色名称",
                 "produces": [
                     "application/json"
                 ],
@@ -34,14 +34,7 @@
                         "in": "query"
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "{\"code\":200,\"data\":[list:[{},{}],total:10],\"msg\":\"ok\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             },
             "post": {
                 "description": "这是一段接口描述",
